# oil-spill-cleanup

./: CMakeLists.txt  MILP_Allocator.cpp  MILP_Allocator.h  Makefile  PID_controller.cpp  PID_controller.h  README.md  activate.ipynb  activate.py  animate_all_data.py  arc_set_up.m  boom-boat.cpp  boom-boat.h  boom-boats-duo.cpp  boom-boats-duo.h  check_boom_loc.py  check_obstacles.cpp  check_spills.cpp  container-boat.h  control_validation.cpp  dubin-path.cpp  dubin-path.h  dubin.cpp  dubin.h  generate_image.py  generate_obstacles.py  generate_spills.py  generic-boat.cpp  generic-boat.h  helper_funcs.cpp  helper_funcs.h  integrator.cpp  integrator.h  main.cpp  main_dubin_check.cpp  non_linear_controller.cpp  non_linear_controller.h  objective_cost.cpp  objective_cost.h  obstacle.cpp  (+11 more)
CGAL/: FPU.h
ControlData/: analyze.py
DubinPath/: dubin_path.txt  dubin_path_L.txt  dubin_path_R.txt
DubinPathLocal/: dubin_path_local.txt  dubin_path_local_L.txt  dubin_path_local_R.txt
DuosData/: Duo0.txt
obstacles/: obstacle_001.txt  obstacle_002.txt  obstacle_003.txt  obstacle_004.txt  obstacle_005.txt  obstacle_006.txt  obstacle_007.txt  obstacle_008.txt  obstacle_009.txt  obstacle_010.txt  obstacle_011.txt  obstacle_012.txt  obstacle_013.txt  obstacle_014.txt  obstacle_015.txt  obstacle_016.txt  obstacle_017.txt  obstacle_018.txt  obstacle_019.txt  obstacle_020.txt
obstacles_convexed/: obstacle_001_convex.txt  obstacle_002_convex.txt  obstacle_003_convex.txt  obstacle_004_convex.txt  obstacle_005_convex.txt  obstacle_006_convex.txt  obstacle_007_convex.txt  (+4 more)
(+52 files in other folders)
